# Emquest

./: Cargo.toml  README.md
src/: main.rs
src/static/: emergence.js  style.css
src/templates/: index.html
