[package]
name = "emquest"
version = "0.1.0"
edition = "2021"
license-file="LICENSE"
repository="https://github.com/EmergenceSystem/Emquest"
description="Simple example client"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
embryo = { git = "ssh://git@github.com/EmergenceSystem/Embryo.git" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-web="4.5.1"
actix-files="0.6.5"
actix-rt="2.5"
actix-web-actors="4.0"
tokio = { version = "1", features = ["full"] }
reqwest="0.11"
lazy_static = "1.4.0"
textwrap = "0.13"
term_size = "0.3.2"
dirs = "3.0.2"
uuid = "0.8.2"
